
Used the $CFG->clientid variable as a per school distinguisher when
generating the eportfolio accounts. This gets prepended to staff
usernames, all pastoral communities, and to teaching class
communities.

The order book can now navigate by buget year, and the value is
maintained between pages. Orders can now be searched by status.

Bugfix to the order of columns in the Report attendance.



Version ClaSS-0.8.40 release (2008/02/21)
-----------------------------------------

Renamed the portfolio scripts so that eportfolio is used consistently
throughout.

Added the eportfolio function library.

The enrolments_matrix can now handle R for students repeating a year.

An attendance summary is now included in reports, using
fetchAttendanceSummary() which contains the rules for calculating the
various statistics. This in turn calls upon the basic
count_attendnace() to do the db count.

The report_attendnace script now accepts a from and to date, and uses
the new attendance summary functions to do the reporting. Added a
template for printing a detailed attendance report.

Reworked the report_comments scripts to be in-line with checksids and
improved the table to high-light ups and downs in student progress. 

New templates for printing from the Report book, progress_summary
added for detailed reporting of comments, and incidents_summary for
listing of incidents.

The fetchComments() now takes an end and a stagrt date.

New fetchCategorydef() function for returning any set of categorydefs
based on their type.


Version ClaSS-0.8.39 release (2008/02/13)
-----------------------------------------

Bugfixes for the handling of alumni in fetchEnrolment and join_community.

Full implementation of the admissions logic to the applications and
enrolments tables, including correct tallying of projected roll and
spaces etc. both for current and future academic years.

Added the ability to access the current roll to the enrolments_list